# asg_rust

./: .env.example  Cargo.toml
migrations/: 20241210030755_create_updated_at_trigger.sql  20241210030755_global_triggers.up.sql  20241210030757_create_customers_table.down.sql  20241210030757_create_customers_table.sql  20241210030757_create_customers_table.up.sql  20241210030757_customers.up.sql  20241210030758_create_users_table.sql  20241210030758_create_users_table.up.sql  20241210030758_users.up.sql  20241210030759_contacts.down.sql  20241210030759_contacts.up.sql  20241210030759_create_contacts_table.sql  20241210030759_create_contacts_table.up.sql  20241210030760_add_preferred_contact_fk_to_customers.down.sql  20241210030760_add_preferred_contact_fk_to_customers.sql  20241210030760_fk_contact_customers.up.sql  20241210030761_permissions.up.sql  20241210030762_roles.down.sql  20241210030762_roles.up.sql  20241210030763_role_has_permissions.up.sql
src/: error.rs  lib.rs  main.rs  security.rs
src/app_state/: config.rs  mod.rs  state.rs
src/auth/: jwt.rs  mod.rs  security.rs
src/middleware/: authorization.rs  log_requests.rs  mod.rs
src/model/: mod.rs  permissions.rs  repository.rs  roles.rs  users.rs
src/routes/: _users.rs  auth.rs  users.rs
src/routes/users/: create.rs  get.rs  list.rs  mod.rs
src/setup/: app.rs  mod.rs
src/validators/: mod.rs  password_rules.rs
