[package]
name = "asg"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
dotenv = "0.15.0"
filelock-rs = "0.1.0-beta.2"
rand = "0.8.5"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.42.0", features = ["full"] }
