[package]
name = "asg"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.7.9"
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
dotenv = "0.15.0"
filelock-rs = "0.1.0-beta.2"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.42.0", features = ["full"] }
